# gabortrajtler

./: .gitignore
week-01/day-3/CodingHours/: CMakeLists.txt  main.cpp
week-01/day-3/DefineBasicInfo/: CMakeLists.txt  main.cpp
week-01/day-3/FavoriteNumber/: CMakeLists.txt  main.cpp
week-01/day-3/HelloMe/: CMakeLists.txt  main.cpp
week-01/day-3/HelloOthers/: CMakeLists.txt  main.cpp
week-01/day-3/HumptyDumpty/: CMakeLists.txt  main.cpp
week-01/day-3/IntroduceYourself/: CMakeLists.txt  main.cpp
week-01/day-3/Swap/: main.cpp
week-01/day-3/TwoNumbers/: CMakeLists.txt  main.cpp
week-01/day-3/VariableMutation/: CMakeLists.txt  main.cpp
week-01/day-3/test/: main.cpp
week-01/day-4/Bmi/: CMakeLists.txt  main.cpp
week-02/day-3/DrawProject_SDL2/: CMakeLists.txt  center_box_function.cpp  centered_square.cpp  checkerboard.cpp  colored_box.cpp  connect_the_dots.cpp  diagonals.cpp  draw.cpp  draw.h  draw2.cpp  four_rectangles.cpp  function_to_center.cpp  go_to_center.cpp  horizontal.cpp  line_play.cpp  line_play_quarters.cpp  main.cpp  middle_lines.cpp  position_square.cpp  position_square_halm.cpp  purple_steps.cpp  purple_steps_3d.cpp  rainbow_box_function.cpp  random.cpp  random.h  sierpinsky_carpet.cpp  starry_night.cpp  starry_night_Bogi.cpp
week-02/day-3/DrawProject_SDL2/cmake/: FindGFA_SDL2.cmake
week-04/day-2/Instruments to Stringed Instruments/: BassGuitar.cpp  BassGuitar.h  CMakeLists.txt  ElectricGuitar.cpp  ElectricGuitar.h  Instrument.cpp  Instrument.h  StringedInstrument.cpp  StringedInstrument.h  Violin.cpp  Violin.h
(+547 files in other folders)
